--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       and <a href="https://github.com/jvehent/sops-spec/pulls">pull requests</a>.</p>
     <table id="branch-master">
       <tr>
-        <th>draft-sops2</th>
-        <td><a href="./draft-sops2.html"
-           class="html draft-sops2">html</a></td>
-        <td><a href="./draft-sops2.txt"
-           class="txt draft-sops2">plain text</a></td>
-        <td><a href="https://tools.ietf.org/rfcdiff?url1=https://tools.ietf.org/id/draft-sops2.txt&amp;url2=https://jvehent.github.io/sops-spec/draft-sops2.txt" class="diff draft-sops2">
+        <th>draft-sops</th>
+        <td><a href="./draft-sops.html"
+           class="html draft-sops">html</a></td>
+        <td><a href="./draft-sops.txt"
+           class="txt draft-sops">plain text</a></td>
+        <td><a href="https://tools.ietf.org/rfcdiff?url1=https://tools.ietf.org/id/draft-sops.txt&amp;url2=https://jvehent.github.io/sops-spec/draft-sops.txt" class="diff draft-sops">
           diff with last submission</a></td>
       </tr>
     </table>
